# dora-robot

./: .gitignore  .gitmodules  Cargo.toml  README.md  README.zh-CN.md  constitution.md
config/: follower.toml  leader.toml
crates/tr-bridge/: Cargo.toml
crates/tr-bridge/src/: main.rs
crates/tr-capture/: Cargo.toml
crates/tr-capture/src/: main.rs
crates/tr-codec/: Cargo.toml
crates/tr-codec/src/: lib.rs
crates/tr-daemon/: Cargo.toml
crates/tr-daemon/src/: config.rs  dora.rs  lib.rs  retry.rs  state.rs  web.rs
crates/tr-messages/: Cargo.toml
crates/tr-messages/src/: capability.rs  codec.rs  command.rs  control.rs  episode.rs  error.rs  feedback.rs  geometry.rs  header.rs  lib.rs
crates/tr-policy/: Cargo.toml
crates/tr-policy/src/: main.rs
crates/tr-robot/: Cargo.toml
crates/tr-robot-node/: Cargo.toml
crates/tr-robot-node/src/: main.rs
crates/tr-robot/src/: driver.rs  error.rs  kinematics.rs  lib.rs  model.rs  sim.rs
crates/tr-session/: Cargo.toml
crates/tr-session/src/: lib.rs
crates/tr-so101/: Cargo.toml
crates/tr-so101/examples/: csv_publisher.rs  csv_tcp_sender.rs  follower_replay.rs  leader_diag.rs  leader_teleop_debug.rs  leader_teleop_tcp.rs  leader_teleop_zenoh.rs  read_leader.rs  tcp_follower.rs  usb_scan.rs  zenoh_follower.rs
crates/tr-so101/src/: arm.rs  config.rs  follower.rs  leader.rs  lib.rs  resolver.rs  servo_loop.rs
crates/tr-teleop/: Cargo.toml
crates/tr-teleop-node/: Cargo.toml
crates/tr-teleop-node/src/: main.rs
crates/tr-teleop/src/: devices.rs  lib.rs
crates/tr-transport/: Cargo.toml
crates/tr-transport-zenoh/: Cargo.toml
crates/tr-transport-zenoh/src/: lib.rs
crates/tr-transport/src/: backends.rs  error.rs  framing.rs  lib.rs  loopback.rs  qos.rs  transport.rs
dataflows/: record.yml  recorder.py  replay.yml  robot_side.yml  teleop_side.yml
dataflows/datasets/meta/: info.json
docs/: architecture.md  camera-integration-design.md  dora-node-api-spike.md  follower-control-loop.md  getting-started.md  leader-arm-cpu-analysis.md  lerobot-dataset-v3-format.md  recording-video-encoding-performance.md  service-based-teleop-console-design.md  service-setup.md  so101-teleoperation-design.md  usb-resolver-integration.md
docs/specs/001-so101-teleop-record/: plan.md  spec.md  tasks.md
docs/specs/002-daemon-service/: plan.md  spec.md  tasks.md
scripts/: setup-linux.sh  setup-macos.sh  setup-windows.ps1  uninstall.sh  update-follower.sh
training/: README.md  pyproject.toml  requirements.txt
training/tr_lerobot/: __init__.py  camera_node.py  pipe_recorder.py  recorder.py  schema.py  train.py  validate.py  writer.py
