[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tr-lerobot"
version = "0.1.0"
description = "dora-robot <-> LeRobot v3 bridge: recorder (DORA Python node), conformance validation, training."
requires-python = ">=3.10"
dependencies = [
    # See requirements.txt for the pinned lerobot pre-release (v3 support).
    "dora-rs>=0.3",
    "pyarrow>=15",
    "numpy>=1.24",
]

[project.scripts]
tr-lerobot-validate = "tr_lerobot.validate:main"
tr-lerobot-train = "tr_lerobot.train:main"

[tool.hatch.build.targets.wheel]
packages = ["tr_lerobot"]
