[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tr-lerobot"
version = "0.1.0"
description = "dora-robot -> LeRobot v3 bridge: recorder, conformance validation, training."
requires-python = ">=3.10"
dependencies = [
    # Installed from the local lerobot/ source (see requirements.txt).
    "lerobot",
    "numpy>=1.24",
]

[project.scripts]
tr-lerobot-validate = "tr_lerobot.validate:main"
tr-lerobot-train = "tr_lerobot.train:main"

[tool.hatch.build.targets.wheel]
packages = ["tr_lerobot"]
