[package]
name = "tr-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "DORA node: communication middleware bridging a dataflow to a Transport."

[dependencies]
tr-messages.workspace = true
tr-transport.workspace = true
tr-codec.workspace = true
dora-node-api = "0.5.0"
futures = "0.3"
eyre = "0.6"
tokio = { version = "1", features = ["rt"] }
