[package]
name = "tr-capture"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "DORA capture node: zenoh subscriber that bridges control/observation/command into DORA Arrow outputs."

[dependencies]
tr-messages = { workspace = true, features = ["serde"] }
tr-codec.workspace = true
tr-transport.workspace = true
tr-transport-zenoh = { path = "../tr-transport-zenoh" }
dora-node-api = { path = "../../dora/apis/rust/node", default-features = false }
dora-arrow-convert = { path = "../../dora/libraries/arrow-convert" }
dora-message = { path = "../../dora/libraries/message" }
dora-core = { path = "../../dora/libraries/core", features = ["zenoh"] }
arrow = { workspace = true }
eyre = { workspace = true }
tokio = { version = "1", features = ["rt", "sync", "time", "macros"] }
serde_json = "1"
