[package]
name = "tr-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Daemon library and binaries for SO-101 teleoperation management."

[dependencies]
tr-messages = { workspace = true, features = ["serde"] }
tr-so101.workspace = true
tr-robot.workspace = true
tr-teleop.workspace = true
tr-codec.workspace = true
tr-transport.workspace = true
tr-transport-zenoh = { path = "../tr-transport-zenoh" }
zenoh = { workspace = true }
feetech-servo-sdk = "0.3.0"
tokio-serial = "5"
tokio = { version = "1", features = ["rt", "sync", "time", "macros"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
usb-resolver.workspace = true
log.workspace = true
anyhow = "1"
chrono = "0.4"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
tokio-stream = { version = "0.1", features = ["sync"] }

[dev-dependencies]
