[package]
name = "tr-so101"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SO-101 arm hardware abstraction: So101Arm over feetech MotorBus (leader/follower roles)."

# Hardware crate (constitution C8): heavy deps allowed, feature-gated.
# Real serial bus is on by default (feetech's `tokio-serial-impl`); `mock` adds
# the MockBus for hardware-free tests/sim.
[dependencies]
feetech-servo-sdk = "0.3.0"
tr-messages.workspace = true
tr-teleop.workspace = true
tr-robot.workspace = true
tr-codec.workspace = true
tr-transport.workspace = true
tr-transport-zenoh = { path = "../tr-transport-zenoh" }
tokio = { version = "1", features = ["rt", "sync", "time", "macros"] }
anyhow = "1"

[features]
mock = ["feetech-servo-sdk/mock"]

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "time"] }
