[package]
name = "tr-transport-zenoh"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Zenoh backend for the tr-transport Transport trait."

[dependencies]
tr-transport = { workspace = true }
zenoh = { workspace = true }
tokio = { version = "1", features = ["rt"] }
anyhow = "1"
serde_json = { workspace = true }
